--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="border"></div>
 
     <div class="tier">
-    <a href="games-easy.html" class="games-link">
+    <a href="Games-easy.html" class="games-link">
     <div class="card-easy">
     </div></a>
     <p>Easy</p>
